# mbot_arm_DRL

./: README.md
mbot_env_wrapper/: CMakeLists.txt  package.xml  setup.py
mbot_env_wrapper/ros/src/mbot_env_wrapper_ros/: gazebo_mbot_gym.py  mbot_arm_env.py  mbot_without_launch.py  run_instructions.txt
mbot_env_wrapper/ros/src/mbot_env_wrapper_ros/assets/launch/: robot.launch
mbot_reward_calculation/: CMakeLists.txt  package.xml  setup.py
mbot_reward_calculation/ros/launch/: mbot_reward_calculation.launch
mbot_reward_calculation/ros/src/: tf_euclidean_distance.cpp
